--- a/Server/package.json
+++ b/Server/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.2",
     "express-validator": "^6.15.0",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^6.16.0",
     "mongoose": "^6.13.8",
     "multer": "^1.4.5-lts.2"
   },
